# pyfreepbx

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Pipfile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: health_check.py  list_extensions.py  queue_health.py  queue_stats.py
src/pyfreepbx/: __init__.py  _version.py  config.py  exceptions.py  facade.py  logging.py
src/pyfreepbx/clients/: __init__.py  ami.py  base.py  freepbx.py  graphql.py  oauth.py  rest.py
src/pyfreepbx/models/: __init__.py  asterisk.py  cdr.py  device.py  extension.py  firewall.py  health.py  logs.py  queue.py  system.py
src/pyfreepbx/schemas/: __init__.py  extension_create.py  extension_update.py  firewall_create.py  firewall_update.py  queue_member.py
src/pyfreepbx/services/: __init__.py  diagnostics.py  extensions.py  firewall.py  health.py  queues.py  system.py
tests/: conftest.py  test_ami_client.py  test_config.py  test_diagnostics.py  test_extensions.py  test_facade.py  test_graphql_client.py  test_health.py  test_oauth_client.py  test_queues.py  test_rest_client.py
